# modern-rag-pipeline

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  railway.json  railway.toml
.github/workflows/: lint.yml  security.yml  test.yml
.hypothesis/constants/: 04ee9df8fbb66b05  0b9be464d4d04332  0cba9ea503b0809c  10b69d1a29e78f13  1f400aec57cf05b3  4f0b0dedda0e4475  54f31ba38d7a31dd  701a0fe537d9e1de  7a54ccea14e77e0a  aa611353f63993b4  acb283fa0c1218dd  c57c044010840757  cd6f6e95a06dd7f4  d4ed8d7c2709a8f5  d82ec925ed0da98f  df2fd05dab8bd136  eda584f59e6ea066  f77ad4ecf786bbab  f833902040764840  fe243d379ecb324d
docs/: architecture.md  production_concerns.md  vector_store_comparison.md
docs/decisions/: 001-hybrid-search.md  002-result-type-pattern.md
eval/: run_ragas.py
examples/: arxiv_rag.py  basic_pipeline.py  evaluation_demo.py  wikipedia_rag.py
notebooks/: chunking_comparison.ipynb
results/: ragas_scores.json
src/: __init__.py
src/api/: __init__.py  app.py
src/chunking/: __init__.py  strategies.py
src/evaluation/: __init__.py  metrics.py
src/rag/: __init__.py  cli.py  config.py  document.py  embeddings.py  llm.py  pipeline.py  result.py
src/retrieval/: __init__.py  hybrid.py  keyword.py  qdrant_store.py  reranker.py  semantic.py  store.py
tests/: test_reranker.py
tests/integration/: test_api.py  test_pipeline.py
tests/unit/: test_chunking.py  test_cli.py  test_config.py  test_document.py  test_embeddings.py  test_llm.py  test_metrics.py  test_result.py  test_retrieval.py
