[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "modern-rag-pipeline"
version = "0.1.0"
description = "Production RAG pipeline with hybrid search, multiple chunking strategies, and comprehensive evaluation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Justin Stilb", email = "jstilb@users.noreply.github.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "langchain>=0.3.0,<0.4.0",
    "langchain-community>=0.3.0,<0.4.0",
    "langchain-openai>=0.3.0,<0.4.0",
    "chromadb>=0.5.0,<0.6.0",
    "fastapi>=0.115.0,<0.116.0",
    "uvicorn[standard]>=0.34.0,<0.35.0",
    "pydantic>=2.10.0,<3.0.0",
    "pydantic-settings>=2.7.0,<3.0.0",
    "httpx>=0.28.0,<0.29.0",
    "tiktoken>=0.8.0,<0.9.0",
    "numpy>=1.26.0,<2.0.0",
    "rank-bm25>=0.2.2,<0.3.0",
    "nltk>=3.9.0,<4.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0.0",
    "pytest-asyncio>=0.24.0,<0.25.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "hypothesis>=6.115.0,<7.0.0",
    "ruff>=0.8.0,<0.9.0",
    "mypy>=1.13.0,<2.0.0",
    "httpx>=0.28.0,<0.29.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
rag-pipeline = "src.rag.cli:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src --cov-report=term-missing"
markers = [
    "integration: marks tests as integration tests",
    "slow: marks tests as slow",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 82
show_missing = true
